more bugfixes on mobile

--- a/src/components/Posts/Post.module.css
+++ b/src/components/Posts/Post.module.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 
 .card {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   transform: scale(0.8);
-  padding: 10px;
+  padding: 5px;
   border-bottom: 1px solid black;
 }
 
@@ -105,7 +105,7 @@
   margin-top: 20px;
 }
 
-.commentbox > * {
+.commentbox>* {
   margin-left: 20px;
 }
 
@@ -124,14 +124,15 @@ span:hover {
   color: black;
 }
 
-.commentscount > * {
+.commentscount>* {
   margin-left: 25px;
 }
+
 .addcomments {
   cursor: pointer;
 }
 
-.likebox > * {
+.likebox>* {
   margin: 10px;
 }
 
@@ -172,10 +173,10 @@ span:hover {
 .balloon {
   position: relative;
   background-color: #fff;
-  padding: 1.125em 1.5em;
+  padding: 10px;
   margin-top: 20px;
   font-size: 1.25em;
-  width: 95%;
+  width: 100%;
   border-radius: 1rem;
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3), 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
 }
