--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -43,7 +43,7 @@
 }
 
 .innerleftcol {
-  padding: 25px;
+  padding: 0px;
   opacity: 0.9;
 }
 
